--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stickerz</title>
     <link rel="icon" href="/img/s15.jpg">
+    <link href = "css/index.css" rel = "stylesheet" type = "text/css"/>
+
 
 </head>
 
@@ -49,7 +51,7 @@
         <div class="productlist">
 
             <article>
-                <img src="https://air-marketing-assets.imgix.net/blog/logo-db/baby-yoda-svg/baby-yoda-png-1.png?auto=format&fit=max&ixlib=react-9.0.2&h=270&w=576" alt="YODA" />
+                <img src="https://air-marketing-assets.imgix.net/blog/logo-db/baby-yoda-svg/baby-yoda-png-1.png?auto=format&fit=max&ixlib=react-9.0.2&h=270&w=576" alt="YODA" class = "yoda" />
 
                 <h3>Yoda</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni consectetur iusto reprehenderit rem dolorem eligendi enim quae explicabo ea, maxime asperiores quo laboriosam tempora atque iste recusandae, eius saepe impedit.</p>
@@ -60,6 +62,9 @@
 
                 </div>
             </article>
+
+            <img src="https://pngimg.com/uploads/mercedes/mercedes_PNG80135.png" alt="mercedes-s-class" class="mercedes-s-class"/>
+            <p class="mercedes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni consectetur iusto reprehenderit rem dolorem eligendi enim quae explicabo ea, maxime asperiores quo laboriosam tempora atque iste recusandae, eius saepe impedit.</p>
 
         </div>
 
